# lammps-ani

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Singularity.def  ani_plugin.cpp  build-base.sh  build-env.sh  build-lammps-ani.sh  build.sh  build_push_docker_manual.sh  pair_ani.cpp  pair_ani.h  pair_ani_kokkos.cpp  pair_ani_kokkos.h  setup.py
.github/workflows/: build_docker.yml  build_docker_base.yml  build_singularity.yml  build_test.yml  slash_comment.yml
ani_csrc/: CMakeLists.txt  ani.cpp  ani.h  test_model.cpp
cumolfind/: .gitignore  README.md  environment.yaml  restart_submit_analysis.py  setup.py  submit_analysis.py
cumolfind/cumolfind/: README.md  analyze_traj.py  combine_xyzs.py  fragment.py  molfind.py  nv_atom_cell_list.py  nv_atomic_data.py  nv_batch.py  nv_batch_nl.py  nv_batch_nl_utils.py  nv_cell_list.py  nv_cell_list_utils.py  nv_cell_utils.py  nv_data.py  nv_utils.py  split_traj.py  top_loader.py  trace.py  trackmol.py
cumolfind/data/: molecule_data.pq  pubchem.py  updated_pubchem.py
docs/: build.md  container.md  usage.md
examples/: .gitignore  analyze.py  apply_hmr.py  pdb2lmp.py  pdb_add_element.py  vmd.tcl  xyz2nc.py
examples/C2/: in.lammps  submit.sh
examples/C22/: C2_50k_2.lmp  in.lammps  submit.sh
examples/alanine-dipeptide/: .gitignore  README.md  alanine-dipeptide-bonds.data  alanine-dipeptide-bonds.npt.vacuum.data  alanine-dipeptide.data  alanine-dipeptide.npt.vacuum.data  alanine-dipeptide.prmtop  alanine-dipeptide.vacuum.hmr.data  in.bonds.lammps  in.hmr.lammps  in.lammps  in.npt.lammps  in.shake.lammps  in.shake.npt.lammps  plot_ramachandran.py  run.sh  run_hmr_vacuum.sh  run_npt.sh  run_shake.sh  run_shake_npt.sh  run_shake_vacuum.sh  run_vacuum.sh  run_vacuum_2.3fs.sh
examples/alanine-dipeptide-umbrella/: README.md
examples/alanine-dipeptide-umbrella/vacuum/: alanine-dipeptide.vacuum.data  in.vacuum.lammps  plot.py  run_one.py  submit_umbrella.py
examples/alanine-dipeptide-umbrella/vacuum-new-model/: plot.py  submit.lmp.blue.sh  submit.lmp.blue.template.sh  submit.lmp.home.sh  submit_umbrella_group.py
examples/alanine-dipeptide-umbrella/water-new-model/: README.md  a.py  alanine-dipeptide.npt.data  in.lammps  plot.py  run_one.py  submit.lmp.expanse.template.sh  submit_umbrella.py  (+1 more)
examples/benchmark/: .gitignore  README.md  in.lammps  in.npt.lammps  in.relax.lammps  in.stability.lammps  in.try.lammps  read_perf.py  run_one.py  submit.py  submit_scaling.py
examples/combustion/: README.md  analyze.py  in.lammps  plot.py  run_one.py  submit.analyze.sh  submit.lmp.sh
examples/early_earth/: README.md  center.py  in.22M.lammps  in.big.lammps  submit.lmp.big.22M.1024GPU.home.sh  submit.lmp.sh
examples/profile/: in.lammps  water-5nm.data
examples/water/: README.md  bench_kokkos.sh  bench_nokokkos.sh  benchmark.sh  in.lammps  in.restart.lammps  run.sh  run_restart.sh  submit.sh  water.small.lmp  waterbox.py
examples/water-NPT/: README.md  in.lammps  in.nvt.lammps  plot_ase.py  plot_lammps.py  run_ase.py  run_lammps.sh  run_lammps_nvt.sh  water-300_0.8.data
examples/water-old/: in.lammps  in.small.lammps
examples/water-stability/: README.md  in.run1.lammps  in.run2.lammps  submit_run1.sh  submit_run2.sh  tip3p.mol
lammps-ani/: pair_ani_kokkos.cpp
lammps-ani/ani_csrc/: ani.cpp  test_model.cpp
lammps_ani/: __init__.py  utils.py
lammps_ani/ani_csrc/: ani.cpp  test_model.cpp
models/: ani_models.py  lammps_ani.py  save_ani.py  test_models.py
models/test/: run.sh  save_ani_nocuaev_double.py
src/: pair_ani.cpp  pair_ani_kokkos.cpp
src/ani_csrc/: CMakeLists.txt  ani.cpp  ani.h  test_model.cpp
tests/: .gitignore  README.md  ani.py  ase_ani_reference.py  in.ani  in.lammps  lammps_ani.py  manybody-pair-ani-double-cpu.yaml  manybody-pair-ani-double-cuda.yaml  manybody-pair-ani-double.yaml  manybody-pair-ani-pbc-double-cpu.yaml  manybody-pair-ani-pbc-double-cuda.yaml  manybody-pair-ani-pbc-double.yaml  manybody-pair-ani-pbc.yaml  manybody-pair-ani.yaml  models.py  mol-pair-ani.yaml  mol-pair-lj_smooth.yaml  save_ani.py  save_ani_nocuaev.py  save_ani_nocuaev_double.py  test.sh  test_all.sh  test_lmp_with_ase.py  test_models.py  utils.py  water-0.8nm.data
tests/lammps-unittest/: .gitignore  ase_ani_reference.py
tests/test_ani2x_cuaev_single/: manybody-pair-ani-pbc-single-cuda.yaml  manybody-pair-ani-single-cuda.yaml
tests/test_ani2x_cuaev_single_full/: manybody-pair-ani-pbc-single-cuda-newton_bond-on.yaml  manybody-pair-ani-pbc-single-cuda.yaml  manybody-pair-ani-single-cuda.yaml  test.sh
tests/test_ani2x_cuaev_single_half/: in.ani  manybody-pair-ani-pbc-single-cuda.yaml  manybody-pair-ani-single-cuda.yaml  test.sh
tests/test_ani2x_nocuaev_double/: ase_ani_reference.py  in.ani  manybody-pair-ani-double-cpu.yaml  manybody-pair-ani-double-cuda.yaml  manybody-pair-ani-pbc-double-cpu-newton_bond-on.yaml  manybody-pair-ani-pbc-double-cpu.yaml  manybody-pair-ani-pbc-double-cuda.yaml  mol-pair-lj_smooth.yaml  save_ani_nocuaev_double.py  test.sh
tests/test_ani2x_nocuaev_double_half/: manybody-pair-ani-double-cpu.yaml  manybody-pair-ani-double-cuda.yaml  manybody-pair-ani-pbc-double-cpu-newton_bond-on.yaml  manybody-pair-ani-pbc-double-cpu.yaml  manybody-pair-ani-pbc-double-cuda.yaml  test.sh
tests/test_ani2x_nocuaev_single/: manybody-pair-ani-pbc-single-cpu-newton_bond-on.yaml  manybody-pair-ani-pbc-single-cpu.yaml  manybody-pair-ani-pbc-single-cuda.yaml  manybody-pair-ani-single-cpu.yaml  manybody-pair-ani-single-cuda.yaml  test.sh
tests/test_ani2x_nocuaev_single_half/: manybody-pair-ani-pbc-single-cpu-newton_bond-on.yaml  manybody-pair-ani-pbc-single-cpu.yaml  manybody-pair-ani-pbc-single-cuda.yaml  manybody-pair-ani-single-cpu.yaml  manybody-pair-ani-single-cuda.yaml  test.sh
tests/testrun/: in.lammps  run.sh
(+95 files in other folders)
